--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "^12.19.1",
     "gsap": "^3.13.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "react-intersection-observer": "^9.16.0",
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
