--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "framer-motion": "^12.19.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
-    "next": "15.3.3",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable": "^3.0.5"
   },
