--- a/portal/package.json
+++ b/portal/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@square/web-sdk": "^2.1.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "next": "16.0.1",
+    "next-transpile-modules": "^10.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "square": "^43.2.0"
