added user directory and editor, loading spinners + skeletons, realtime updates from events table in supabase.

--- a/portal/package.json
+++ b/portal/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
     "@radix-ui/react-label": "^2.1.8",
     "@square/web-sdk": "^2.1.0",
     "@supabase/ssr": "^0.7.0",
